Added title tag

--- a/image-api/index.html
+++ b/image-api/index.html
@@ -146,7 +146,7 @@
 
           <!-- 1. Audience -->
           <section class="wrapper audience" id="audience">
-            <h2>1. Audience <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>1. Audience <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <p>
               This document is intended for developers building applications that share digital image assets. This includes:
@@ -170,7 +170,7 @@
 
           <!-- 2. URL Syntax -->
           <section class="wrapper url-syntax" id="url-syntax">
-            <h2>2. URL Syntax <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>2. URL Syntax <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <p>
               The IIIF Image API can be called in two forms: one to request an image, and a second to request techincal information
@@ -228,7 +228,7 @@
 
           <!-- 2.1 Image Request URL Syntax -->
           <section class="wrapper url-syntax-image-request" id="url-syntax-image-request">
-            <h3>2.1 Image Request URL Syntax <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
+            <h3>2.1 Image Request URL Syntax <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
 
             <p>
               The IIIF Image API URL for requesting an image MUST conform to the following format:
@@ -261,7 +261,7 @@
 
           <!-- 2.2 Image Information Request URL Syntax -->
           <section class="wrapper url-syntax-image-request" id="url-syntax-image-request">
-            <h3>2.2 Image Information Request URL Syntax <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
+            <h3>2.2 Image Information Request URL Syntax <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
 
             <p>
               The IIIF Image API URL for requesting image information MUST conform to the following syntax:
@@ -298,7 +298,7 @@
 
           <!-- 3. Identifier -->
           <section class="wrapper identifier" id="identifier">
-            <h2>3. Identifier <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>3. Identifier <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <p>
               The API places no restrictions on the form of the identifiers that a server may use or support, although the identifier
@@ -312,7 +312,7 @@
 
           <!-- 4. Image Request Parameters -->
           <section class="wrapper parameters" id="parameters">
-            <h2>4. Image Request Parameters <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>4. Image Request Parameters <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <p>
               All parameters described below are required for compliant construction of a IIIF image API URL. The sequence of
@@ -328,7 +328,7 @@
 
           <!-- 4.1 Region -->
           <section class="wrapper parameters-region" id="parameters-region">
-            <h3>4.1 Region <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
+            <h3>4.1 Region <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
 
             <p>
               The region parameter defines the rectangular portion of the source image to be returned. Region can be specified by
@@ -409,7 +409,7 @@
 
           <!-- 4.2 Size -->
           <section class="wrapper parameters-size" id="parameters-size">
-            <h3>4.2 Size <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
+            <h3>4.2 Size <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
 
             <p>
               The size parameter determines the dimensions to which the extracted region is to be scaled.
@@ -508,7 +508,7 @@
 
           <!-- 4.3 Rotation -->
           <section class="wrapper parameters-rotation" id="parameters-rotation">
-            <h3>4.3 Rotation <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
+            <h3>4.3 Rotation <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
 
             <p>
               The rotation value represents the number of degrees of clockwise rotation from the original, and may be any
@@ -559,7 +559,7 @@
 
           <!-- 4.4 Quality -->
           <section class="wrapper parameters-quality" id="parameters-quality">
-            <h3>4.4 Quality <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
+            <h3>4.4 Quality <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
 
             <p>
               The quality parameter determines the bit-depth of the delivered image. The quality value of "native" requests an image
@@ -629,7 +629,7 @@
 
           <!-- 4.5 Format -->
           <section class="wrapper parameters-format" id="parameters-format">
-            <h3>4.5 Format <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
+            <h3>4.5 Format <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
 
             <p>
               The format of the returned image is optionally expressed as an extension at the end of the URL.
@@ -689,7 +689,7 @@
 
           <!-- 4.6 Order of Implementation -->
           <section class="wrapper parameters-order" id="parameters-order">
-            <h3>4.6 Order of Implementation <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
+            <h3>4.6 Order of Implementation <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
 
             <p>
               The sequence of parameters in the URL is intended to express the order in which image manipulations are made against the
@@ -711,7 +711,7 @@
 
           <!-- 5. Image Information Request -->
           <section class="wrapper image-info-request" id="image-info-request">
-            <h2>5. Image Information Request <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>5. Image Information Request <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <p>
               The service MUST return technical information about the requested image in the JSON format.  The request  for technical
@@ -838,13 +838,13 @@
 
           <!-- 6. Server Responses  -->
           <section class="wrapper server-responses" id="server-responses">
-            <h2>6. Server Responses <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>6. Server Responses <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
           </section>
 
 
           <!-- 6.1 Successful Responses -->
           <section class="wrapper server-responses-successful" id="server-responses-successful">
-            <h3>6.1 Successful Responses <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
+            <h3>6.1 Successful Responses <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
 
             <p>
               Servers may transmit HTTP responses with 200 (Successful) or 3xx (Redirect) status codes when the request has been
@@ -860,7 +860,7 @@
 
           <!-- 6.2 Error Conditions -->
           <section class="wrapper server-responses-error" id="server-responses-error">
-            <h3>6.2 Error Conditions <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
+            <h3>6.2 Error Conditions <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h3>
 
             <p>
               The order in which servers parse requests and detect errors is not specified. A request will fail on the first error
@@ -924,7 +924,7 @@
 
           <!-- 7. Authentication  -->
           <section class="wrapper authentication" id="authentication">
-            <h2>7. Authentication <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>7. Authentication <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <p>
               This API does not specify whether the image server will support authentication or what mechanism it might use. In the
@@ -954,7 +954,7 @@
 
           <!-- 8. Compliance Levels -->
           <section class="wrapper compliance-levels" id="compliance-levels">
-            <h2>8. Compliance Levels <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>8. Compliance Levels <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <p>
               A service should specify on all responses the extent to which the API is supported. This is done by including an HTTP
@@ -979,7 +979,7 @@
 
           <!-- 9. URL Encoding and Decoding -->
           <section class="wrapper url-encoding-and-decoding" id="url-encoding-and-decoding">
-            <h2>9. URL Encoding and Decoding <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>9. URL Encoding and Decoding <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <p>
               The URL syntax of this API relies upon slash (/) separators which MUST NOT be encoded. Clients MUST percent-encode
@@ -1053,7 +1053,7 @@
 
           <!-- 10. Security Considerations -->
           <section class="wrapper security-considerations" id="security-considerations">
-            <h2>10. Security Considerations <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>10. Security Considerations <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <p>
               This API defines a URI syntax and the semantics associated with its components. The composition of URIs has few security
@@ -1073,7 +1073,7 @@
 
           <!-- A. Implementation Notes -->
           <section class="wrapper implementation" id="implementation">
-            <h2>A. Implementation Notes <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>A. Implementation Notes <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <ul>
               <li>
@@ -1109,7 +1109,7 @@
 
           <!-- B. Acknowledgments -->
           <section class="wrapper acknowledgments" id="acknowledgments">
-            <h2>B. Acknowledgments <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>B. Acknowledgments <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <p>
               The production of this document was generously supported by a grant from the
@@ -1138,7 +1138,7 @@
 
           <!-- C. Change Log -->
           <section class="wrapper changelog" id="changelog">
-            <h2>C. Change Log <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
+            <h2>C. Change Log <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <table class="image-api-table">
               <tr>
