Updated image API numbering

--- a/image-api/index.html
+++ b/image-api/index.html
@@ -232,10 +232,10 @@
           </section>
 
 
-          <!-- 2.1 Image Request URL Syntax -->
+          <!-- 2.1. Image Request URL Syntax -->
           <section class="wrapper url-syntax-image-request" id="url-syntax-image-request">
             <h3>
-              2.1 Image Request URL Syntax
+              2.1. Image Request URL Syntax
               <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a>
             </h3>
 
@@ -344,10 +344,10 @@
           </section>
 
 
-          <!-- 4.1 Region -->
+          <!-- 4.1. Region -->
           <section class="wrapper parameters-region" id="parameters-region">
             <h3>
-              4.1 Region
+              4.1. Region
               <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a>
             </h3>
 
@@ -428,10 +428,10 @@
           </section>
 
 
-          <!-- 4.2 Size -->
+          <!-- 4.2. Size -->
           <section class="wrapper parameters-size" id="parameters-size">
             <h3>
-              4.2 Size
+              4.2. Size
               <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a>
             </h3>
 
@@ -530,10 +530,10 @@
           </section>
 
 
-          <!-- 4.3 Rotation -->
+          <!-- 4.3. Rotation -->
           <section class="wrapper parameters-rotation" id="parameters-rotation">
             <h3>
-              4.3 Rotation
+              4.3. Rotation
               <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a>
             </h3>
 
@@ -584,10 +584,10 @@
           </section>
 
 
-          <!-- 4.4 Quality -->
+          <!-- 4.4. Quality -->
           <section class="wrapper parameters-quality" id="parameters-quality">
             <h3>
-              4.4 Quality
+              4.4. Quality
               <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a>
             </h3>
 
@@ -657,10 +657,10 @@
           </section>
 
 
-          <!-- 4.5 Format -->
+          <!-- 4.5. Format -->
           <section class="wrapper parameters-format" id="parameters-format">
             <h3>
-              4.5 Format
+              4.5. Format
               <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a>
             </h3>
 
@@ -720,10 +720,10 @@
           </section>
 
 
-          <!-- 4.6 Order of Implementation -->
+          <!-- 4.6. Order of Implementation -->
           <section class="wrapper parameters-order" id="parameters-order">
             <h3>
-              4.6 Order of Implementation
+              4.6. Order of Implementation
               <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a>
             </h3>
 
@@ -856,7 +856,7 @@
             <p>
               The JSON response should conform to the format shown in the following example:
             </p>
-            <p class="code-block" style="white-space: pre; word-wrap: break-word;">{
+            <p class="code-block multi-line-code">{
   "@context" : "http://library.stanford.edu/iiif/image-api/1.1/context.json",
   "@id" : "http://iiif.example.com/prefix/1E34750D-38DB-4825-A38A-B60A345E591C",
   "width" : 6000,
@@ -884,10 +884,10 @@
           </section>
 
 
-          <!-- 6.1 Successful Responses -->
+          <!-- 6.1. Successful Responses -->
           <section class="wrapper server-responses-successful" id="server-responses-successful">
             <h3>
-              6.1 Successful Responses
+              6.1. Successful Responses
               <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a>
             </h3>
 
@@ -903,10 +903,10 @@
           </section>
 
 
-          <!-- 6.2 Error Conditions -->
+          <!-- 6.2. Error Conditions -->
           <section class="wrapper server-responses-error" id="server-responses-error">
             <h3>
-              6.2 Error Conditions
+              6.2. Error Conditions
               <a href="#toc" title="Back to Table of Contents"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a>
             </h3>
 
