Added links to metadata API

--- a/metadata-api/index.html
+++ b/metadata-api/index.html
@@ -157,9 +157,9 @@
             </p>
             <p>
               The principles of Linked Data and the architecture of the Web are adopted in order to provide a distributed and
-              interoperable system. The Shared Canvas data model is leveraged in a specific, JSON based format that is easy to
-              implement without understanding RDF, but is still compatible with it. As such it can be seen as a recommended
-              serialization profile for Shared Canvas.
+              interoperable system. The <a href="http://www.shared-canvas.org/" target="_blank">Shared Canvas data model</a> is
+              leveraged in a specific, JSON based format that is easy to implement without understanding RDF, but is still compatible
+              with it. As such it can be seen as a recommended serialization profile for Shared Canvas.
             </p>
           </section>
 
@@ -507,7 +507,8 @@
                 </ul>
               </li>
               <li>
-                Additional image information may be provided, as described in the IIIF Image API.
+                Additional image information may be provided, as described in the
+                <a href="http://www-sul.stanford.edu/iiif/image-api/1.1/#info" target="_blank">IIIF Image API</a>.
               </li>
             </ul>
 
@@ -529,9 +530,9 @@
               </li>
               <li>
                 <span class="font-weight-600">service</span>: A link to a service that makes more functionality available for the resource, such as from
-                an image to the base URI of an IIIF Image API service. The service resource should have additional information associated with it in
-                order to allow the client to determine how to make appropriate use of it, such as a "profile" link to a service description or
-                information duplicated from the IIIF Image API Information Request
+                an image to the base URI of an <a href="http://library.stanford.edu/iiif/image-api/" target="_blank">IIIF Image API service</a>. The
+                service resource should have additional information associated with it in order to allow the client to determine how to make appropriate
+                use of it, such as a "profile" link to a service description or information duplicated from the IIIF Image API Information Request
               </li>
               <li>
                 <span class="font-weight-600">seeAlso</span>: A link to a document that describes the resource in a machine readable way. This could be an
