Added legend for metadata API table

--- a/metadata-api/index.html
+++ b/metadata-api/index.html
@@ -1743,6 +1743,22 @@
               <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a>
             </h2>
 
+            <ul class="legend">
+              <li>
+                <div class="req mandatory"></div> Mandatory/Required
+              </li>
+              <li>
+                <div class="req recommended"></div> Recommended
+              </li>
+              <li>
+                <div class="req optional"></div> Optional
+              </li>
+              <li>
+                <div class="req not-applicable">N/A</div> Not Applicable
+                <!-- N/A : Not Applicable -->
+              </li>
+            </ul>
+
             <table class="image-api-table">
               <tr>
                 <th></th>
