Updated metadata API legend table

--- a/metadata-api/index.html
+++ b/metadata-api/index.html
@@ -1754,8 +1754,8 @@
                 <div class="req optional"></div> Optional
               </li>
               <li>
-                <div class="req not-applicable">N/A</div> Not Applicable
-                <!-- N/A : Not Applicable -->
+                <div class="req not-applicable"></div> Not Applicable
+
               </li>
             </ul>
 
@@ -1794,9 +1794,9 @@
                 <td><div class="req optional"></div></td>
                 <td><div class="req mandatory"></div></td>
                 <td><div class="req mandatory"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
@@ -1812,9 +1812,9 @@
                 <td><div class="req optional"></div></td>
                 <td><div class="req recommended"></div></td>
                 <td><div class="req mandatory"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
@@ -1830,11 +1830,11 @@
                 <td><div class="req optional"></div></td>
                 <td><div class="req mandatory"></div></td>
                 <td><div class="req mandatory"></div></td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req mandatory"></div></td>
                 <td><div class="req mandatory"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
@@ -1842,17 +1842,17 @@
               <tr>
                 <td>Annotation</td>
                 <td><div class="req optional"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req recommended"></div></td>
                 <td><div class="req mandatory"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
@@ -1860,17 +1860,17 @@
               <tr>
                 <td>AnnotationList</td>
                 <td><div class="req optional"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req mandatory"></div></td>
                 <td><div class="req mandatory"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
@@ -1884,9 +1884,9 @@
                 <td><div class="req optional"></div></td>
                 <td><div class="req mandatory"></div></td>
                 <td><div class="req mandatory"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
@@ -1901,9 +1901,9 @@
                 <td><div class="req optional"></div></td>
                 <td><div class="req mandatory"></div></td>
                 <td><div class="req mandatory"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
@@ -1912,8 +1912,8 @@
               </tr>              <tr>
                 <td>Image Content</td>
                 <td><div class="req optional"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req mandatory"></div></td>
@@ -1921,25 +1921,25 @@
                 <td><div class="req recommended"></div></td>
                 <td><div class="req recommended"></div></td>
                 <td><div class="req recommended"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
               </tr>              <tr>
                 <td>Other Content</td>
                 <td><div class="req optional"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req mandatory"></div></td>
                 <td><div class="req mandatory"></div></td>
                 <td><div class="req recommended"></div></td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
-                <td class="text-align-center">N/A</td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
+                <td><div class="req not-applicable"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
                 <td><div class="req optional"></div></td>
